--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="very_long_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis iaculis maximus. Maecenas eu volutpat magna. Vestibulum quis laoreet leo. Proin ipsum mi, gravida et nisl nec, bibendum hendrerit sapien. Duis lacus dolor, blandit quis lobortis a, posuere vitae turpis. Proin in nunc ut nunc convallis eleifend ac sit amet erat. Aenean condimentum id enim quis aliquet. Nulla diam leo, fringilla sit amet arcu sit amet, interdum placerat elit.
+
+Maecenas sed fringilla risus. In egestas convallis nunc, sit amet cursus elit vulputate dictum. Cras porttitor augue eu pulvinar posuere. Donec semper nunc sit amet libero porttitor dapibus. Duis gravida urna urna, quis consectetur erat porta a. Maecenas sed tellus a massa interdum ullamcorper. Integer consequat lacus non ultrices mollis. Vestibulum ullamcorper leo sit amet dolor accumsan feugiat. Nullam hendrerit, libero et consequat convallis, mi lacus posuere diam, eu condimentum dui massa sit amet nisl.
+
+Duis ut tristique massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non nibh non eros dictum maximus ut at purus. Phasellus lobortis fermentum hendrerit. Nullam nec consectetur nisl. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam sollicitudin fermentum velit, non mollis ex vehicula quis. Vestibulum semper ligula eu egestas dictum. Nulla facilisi.
+
+Nunc faucibus est ligula, sit amet malesuada ligula volutpat sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus id fringilla tellus. Curabitur porttitor aliquet posuere. Sed pulvinar id mi in ullamcorper. Ut purus ante, dictum nec magna ut, tincidunt convallis libero. Maecenas id lectus ut libero varius finibus. Suspendisse gravida ipsum ut justo scelerisque porttitor.
+
+Curabitur at ullamcorper lacus. Integer nec feugiat purus, vel porttitor risus. Nulla facilisi. In hac habitasse platea dictumst. Curabitur blandit consectetur tortor, nec blandit justo faucibus laoreet. Vivamus sed suscipit nunc, eget gravida massa. Nam scelerisque id leo non tempus. Proin a dui et lacus commodo rutrum. Morbi aliquam nisl id dolor porttitor, sed tristique eros maximus. Nulla vitae tincidunt sem. Etiam magna risus, congue in mollis at, volutpat eget augue. Suspendisse a molestie tortor, et porta augue. Nulla elementum purus turpis, ut congue elit dignissim at.</string>
 </resources>
