--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@ Duis ut tristique massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit
 Nunc faucibus est ligula, sit amet malesuada ligula volutpat sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus id fringilla tellus. Curabitur porttitor aliquet posuere. Sed pulvinar id mi in ullamcorper. Ut purus ante, dictum nec magna ut, tincidunt convallis libero. Maecenas id lectus ut libero varius finibus. Suspendisse gravida ipsum ut justo scelerisque porttitor.
 
 Curabitur at ullamcorper lacus. Integer nec feugiat purus, vel porttitor risus. Nulla facilisi. In hac habitasse platea dictumst. Curabitur blandit consectetur tortor, nec blandit justo faucibus laoreet. Vivamus sed suscipit nunc, eget gravida massa. Nam scelerisque id leo non tempus. Proin a dui et lacus commodo rutrum. Morbi aliquam nisl id dolor porttitor, sed tristique eros maximus. Nulla vitae tincidunt sem. Etiam magna risus, congue in mollis at, volutpat eget augue. Suspendisse a molestie tortor, et porta augue. Nulla elementum purus turpis, ut congue elit dignissim at.</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
