--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="empty_movies_message">Sorry, there are no Movies to display :( \nTap to try again</string>
+    <string name="snackbar_action_undo">undo</string>
+    <string name="movie_added_to_watchlist">Movie added to watchlist</string>
 </resources>
